manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myadmission
  namespace: default
  labels:
    name: myadmission
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: myadmission 
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: myadmission
  namespace: default
  labels:
    name: myadmission
spec:
  replicas: 1
  template:
    metadata:
      name: myadmission 
      labels:
        name: myadmission
    spec:
      containers:
        - name: webhook
          image: kasvith/myadmission:1.0.0
          imagePullPolicy: IfNotPresent
          args:
            - -alsologtostderr
            - --log_dir=/
            - -v=10
            - 2>&1
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 00Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: logs
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: myadmission
        - name: logs
          emptyDir: {}
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: myadmission
webhooks:
  - name: myadmission.kasvith.io
    clientConfig:
      service:
        name: myadmission
        namespace: default
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQwakNDQXJvQ0NRREljclJJOHpEUFZEQU5CZ2txaGtpRzl3MEJBUTBGQURDQnFqRUxNQWtHQTFVRUJoTUMKVEVzeEVEQU9CZ05WQkFnTUIwTnZiRzl0WW04eEVEQU9CZ05WQkFjTUIwTnZiRzl0WW04eER6QU5CZ05WQkJFTQpCalF3TkRBME1ERU9NQXdHQTFVRUNRd0ZNakFnVUVjeERUQUxCZ05WQkFvTUJIZHpiekl4RWpBUUJnTlZCQXNNCkNVRlFTVTBnVkdWaGJURVJNQThHQTFVRUF3d0lkM052TWk1amIyMHhJREFlQmdrcWhraUc5dzBCQ1FFV0VXNXYKTFhKbGNHeDVRSGR6YnpJdVkyOXRNQjRYRFRFNU1EVXdPVEF6TlRBME5Wb1hEVEU1TURZd09EQXpOVEEwTlZvdwpnYW94Q3pBSkJ [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["mykinds"]
    failurePolicy: Ignore
